src/tests/fixtures/extend_type/interfaceFirstArgumentType.ts.expected
-----------------
INPUT
----------------- 
/** @gqlType */
class Query {
  /** @gqlField */
  foo: string;
}

/** @gqlInterface */
interface IFoo {
  /** @gqlField */
  bar: string;
}

/** @gqlField */
export function greeting(iFoo: IFoo): string {
  return "Hello world!";
}

-----------------
OUTPUT
-----------------
src/tests/fixtures/extend_type/interfaceFirstArgumentType.ts:8:1 - error: Cannot extend non-object type "IFoo".

 8 interface IFoo {
   ~~~~~~~~~~~~~~~~
 9   /** @gqlField */
   ~~~~~~~~~~~~~~~~~~
10   bar: string;
   ~~~~~~~~~~~~~~
11 }
   ~

  src/tests/fixtures/extend_type/interfaceFirstArgumentType.ts:14:1
    14 export function greeting(iFoo: IFoo): string {
       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    15   return "Hello world!";
       ~~~~~~~~~~~~~~~~~~~~~~~~
    16 }
       ~
    Related location
